--- a/CMS/CMS.Web/Views/Country/GetCountries.cshtml
+++ b/CMS/CMS.Web/Views/Country/GetCountries.cshtml
@@ -29,13 +29,14 @@
                                 <td>@country.Name</td>
                                 <td>@country.companyDTOs.Count</td>
                                 <td>
-                                    <a class="bx bxs-edit-alt" style="font-size:x-large" asp-action="UpdateCountry" asp-route-id="@country.Id"></a>|
-                                    <a class="bx bx-detail" style="font-size:x-large" asp-action="ShowCompanies" asp-route-id="@country.Id"></a>
-                                    |
-                                    <form method="post" asp-action="DeleteCountry">
+                                    <a class="bx bxs-edit-alt" style="font-size:x-large" asp-action="UpdateCountry" asp-route-id="@country.Id"></a> |
+                                    <a class="bx bx-detail" style="font-size:x-large" asp-action="ShowCompanies" asp-route-id="@country.Id"></a> |
+                                    <a class="ri-delete-bin-2-line text-danger" style="font-size:x-large" href="@Url.Action("ConfirmDelete", new { id = country.Id })"></a>
+
+                                  @*   <form method="post" asp-action="DeleteCountry">
                                         <input type="hidden" name="id" value="@country.Id" />
                                         <button type="submit" class="btn btn-danger">Delete</button>
-                                    </form>
+                                    </form> *@
                                     
                                     
                                 </td>
@@ -47,3 +48,14 @@
         </div>
     </div><!--end col-->
 </div><!--end row-->
+
+
+<script>
+    // JavaScript function to handle the actual deletion
+    function confirmDelete(id) {
+        if (confirm("Are you sure you want to delete this country?")) {
+            // If the user confirms, navigate to the DeleteCompany action with the id
+            window.location.href = "@Url.Action("DeleteCountry")/" + id;
+        }
+    }
+</script>
