--- a/CMS/CMS.Web/Views/Position/UpdatePosition.cshtml
+++ b/CMS/CMS.Web/Views/Position/UpdatePosition.cshtml
@@ -11,10 +11,8 @@
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
+    <div class="form-group text-end" style="margin-top:4px;">
+        <a class="btn btn-secondary" asp-action="GetPositions"> back to list</a>
         <input type="submit" class="btn btn-primary" value="Save" />
     </div>
 </form>
-<p>
-    <a asp-action="GetPositions"> back to list</a>
-</p>
