--- a/CMS/CMS.Web/Views/Shared/_Layout.cshtml
+++ b/CMS/CMS.Web/Views/Shared/_Layout.cshtml
@@ -116,10 +116,10 @@
                                 <span class="logo-sm">
                                     <img src="~/theme/images/logo-sm.png" alt="" height="22">
                                 </span>
-                                <span class="logo-lg">
+                                @* <span class="logo-lg">
                                     <img src="~/theme/images/logo-light.png" alt="" height="17">
 
-                                </span>
+                                </span> *@
                                 <span class="logo-lg">
                                     <img src="~/theme/images/candidate-logo.png" alt="" height="17">
                                 </span>
@@ -459,9 +459,9 @@
                     <span class="logo-sm">
                         <img src="~/theme/images/logo-sm.png" alt="" height="22">
                     </span>
-                    <span class="logo-lg">
+                   @*  <span class="logo-lg">
                         <img src="~/theme/images/logo-light.png" alt="" height="17">
-                    </span>
+                    </span> *@
                 </a> 
                 <button type="button" class="btn btn-sm p-0 fs-20 header-item float-end btn-vertical-sm-hover" id="vertical-hover">
                     <i class="ri-record-circle-line"></i>
