--- a/CMS/CMS.Web/Views/Company/Details.cshtml
+++ b/CMS/CMS.Web/Views/Company/Details.cshtml
@@ -36,7 +36,7 @@
             @Html.DisplayFor(model => model.PhoneNumber)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CountryName)
+            Country Name
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CountryName)
