--- a/CMS/CMS.Web/Views/Notifications/Details.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/Details.cshtml
@@ -3,9 +3,9 @@
 <h1>Notification Details</h1>
 
 <dl class="row">
-    <dt class="col-sm-2">Receiver ID:</dt>
+  @*   <dt class="col-sm-2">Receiver ID:</dt>
     <dd class="col-sm-10">@Model.ReceiverId</dd>
-
+ *@
     <dt class="col-sm-2">Sent Date:</dt>
     <dd class="col-sm-10">@Model.SendDate</dd>
 
