--- a/CMS/CMS.Web/Views/Interviews/Edit.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Edit.cshtml
@@ -47,7 +47,7 @@
             <span asp-validation-for="Score" class="text-danger"></span>
         </div>
     } *@
-
+@*
     <div class="form-group">
         <label asp-for="Score" class="control-label">Score</label>
         @if ((User.IsInRole("HR Manager") || User.IsInRole("Admin")) && Model.StatusName == "Pending")
@@ -60,19 +60,19 @@
             <span asp-validation-for="Score" class="text-danger"></span>
         }
     </div>
-
+*@
 
   
-    <div class="form-group">
+   @* <div class="form-group">
         <label asp-for="StatusId" class="control-label">Status</label>
         @Html.DropDownListFor(model => model.StatusId, (SelectList)ViewBag.statusList, "Select an Interviewer", new { @class = "form-control" })
         <span asp-validation-for="StatusId" class="text-danger"></span>
-    </div>
-    <div class="form-group">
+    </div>*@
+   @* <div class="form-group">
         <label asp-for="Notes" class="control-label"></label>
         <input asp-for="Notes" class="form-control" />
         <span asp-validation-for="Notes" class="text-danger"></span>
-    </div>
+    </div>*@
     <div class="form-group">
         <input asp-for="AttachmentId" class="form-control" hidden />
     </div>
@@ -83,7 +83,8 @@
     </div>
 
 </form>
-
+<p>@Html.ValidationSummary()</p>
+@*
 <form asp-action="UpdateAttachment" asp-route-id="@Model.InterviewsId" enctype="multipart/form-data">
     <div class="form-group">
         <label for="file">Upload Attachment:</label>
@@ -95,3 +96,4 @@
     </div>
 
 </form>
+*@
