--- a/CMS/CMS.Web/Views/Shared/_Layout.cshtml
+++ b/CMS/CMS.Web/Views/Shared/_Layout.cshtml
@@ -524,7 +524,7 @@
                     Action = "Index",
                     Icon = "ri-tv-fill",
                     Label = "Notifications",
-                    Roles = new[] {"Admin","HR Manager"}
+                    Roles = new[] {"HR Manager"}
                     },
                     // new
                     // {
