--- a/CMS/CMS.Web/Views/Candidates/Create.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Create.cshtml
@@ -14,7 +14,7 @@
         <input asp-for="Phone" class="form-control" autocomplete="off" />
         <span asp-validation-for="Phone" class="text-danger"></span>
     </div>
-@* 
+
     <div class="form-group" style="margin-top: 15px;">
 
         <label asp-for="PositionId" class="control-label">Position</label>
@@ -27,7 +27,7 @@
         }
 
         <span asp-validation-for="PositionId" class="text-danger"></span>
-    </div> *@
+    </div>
     <div class="form-group" style="margin-top: 15px;">
 
         <label asp-for="CompanyId" class="control-label">Company Name</label>
