--- a/CMS/CMS.Web/Views/Candidates/Index.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Index.cshtml
@@ -13,16 +13,17 @@
                 @Html.TextBox("FullName", null, new { @class = "form-control" })
             </div>
             <div class="col-md-3">
-                @Html.Label("Filter by Phone Number:")
+                @Html.Label("Filter by Phone Number (Partial):")
                 @Html.TextBox("Phone", null, new { @class = "form-control" })
             </div>
-            <div class="col-md-3" style="margin-top:27px;">
+            <div class="col-md-3" style="margin-top: 27px;">
                 <label>&nbsp;</label>
-                <button type="submit"   class="btn btn-primary btn-block">Filter</button>
+                <button type="submit" class="btn btn-primary btn-block">Filter</button>
             </div>
         </div>
     </div>
 }
+
 
 
 
