--- a/CMS/CMS.Web/Views/Country/ShowCompanies.cshtml
+++ b/CMS/CMS.Web/Views/Country/ShowCompanies.cshtml
@@ -1,47 +1,41 @@
 ﻿@model CMS.Application.DTOs.CountryDTO
+
 @{
     ViewData["Title"] = "Companies in This Country";
 }
 
+<div>
+    <dl>
+        <dt class="col-sm-2">
+            Country Name:
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Name
+        </dd>
+    </dl>
+    <dl>
+        <dt>Companies Name:</dt>
+        <dd>
+            @foreach (var com in Model.companyDTOs)
+            {
 
-<div class="row">
-    <div class="col-lg-12">
-        <div class="card">
-            <div class="card-header d-flex align-items-center">
-              
-                <h5 class="card-title mx-1 mb-0 flex-grow-1">Companies</h5>
-            </div>
-            <div class="card-body">
 
-                <table id="add-rows" class="table table-nowrap dt-responsive table-bordered display" style="width:100%">
-                    <thead>
-                        <tr>
-                            <th>Country Name</th>
-                            <th>Company Name</th>
-                        </tr>
+                @com.Name
 
-                    </thead>
-                    <tbody>
-                        <tr>
-                    <td>@Model.Name</td>
-                        
-                        @foreach (var com in Model.companyDTOs)
-                        {
-                          
-                                
-                                <td>@com.Name</td>
-                               
-                        }
-                        </tr>
-                    </tbody>
+                @if (com != Model.companyDTOs.Last())
+                {
+                    @(",  ")
+                }
 
-                </table>
-                <div class="form-group text-end" >
-                    <a asp-action="GetCountries" class="btn btn-secondary"> back to list</a>
-                    <a asp-action="UpdateCountry" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
-                </div>
-            </div>
-        </div>
-    </div><!--end col-->
-</div><!--end row-->
+            }
+        </dd>
+    </dl>
+ 
 
+</div>
+
+
+<div class="form-group text-end">
+    <a asp-action="GetCountries" class="btn btn-secondary"> back to list</a>
+    <a asp-action="UpdateCountry" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
+</div>
