--- a/CMS/CMS.Web/Views/Interviews/Delete.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Delete.cshtml
@@ -56,10 +56,17 @@
         </dd>
 
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.AttachmentId)
+            Evaluation
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.AttachmentId)
+            @if (Model.AttachmentId != null)
+            {
+                <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.AttachmentId">Download evaluation</a>
+            }
+            else
+            {
+
+            }
         </dd>
     </dl>
     
