1.adding pagination 2.doing tree 3.pending 4.getig coment decinary fore candidatepercompany

--- a/CMS/CMS.Web/Views/Country/GetCountries.cshtml
+++ b/CMS/CMS.Web/Views/Country/GetCountries.cshtml
@@ -1,4 +1,8 @@
-﻿@model List<CMS.Application.DTOs.CountryDTO>
+﻿<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<link href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css" rel="stylesheet" />
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+
+@model List<CMS.Application.DTOs.CountryDTO>
 @{
     ViewData["Title"] = "Countries";
 }
@@ -14,7 +18,7 @@
             </div>
             <div class="card-body">
 
-                <table id="add-rows" class="table table-nowrap dt-responsive table-bordered display" style="width:100%">
+                <table id="add-rows2" class="table table-nowrap dt-responsive table-bordered display" style="width:100%">
                     <thead>
                         <tr>
                             <th>Country Name</th>
@@ -58,4 +62,11 @@
             window.location.href = "@Url.Action("DeleteCountry")/" + id;
         }
     }
+</script>
+<script>
+    $.noConflict();
+    jQuery(document).ready(function ($) {
+        $('#add-rows2').DataTable();
+
+    });
 </script>
