--- a/CMS/CMS.Web/Views/SearchInterviews/Index.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Index.cshtml
@@ -1,5 +1,7 @@
-﻿@model IEnumerable<CMS.Application.DTOs.InterviewsDTO>
-
+﻿<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<link href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css" rel="stylesheet" />
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+@model IEnumerable<CMS.Application.DTOs.InterviewsDTO>
 @{
     ViewData["Title"] = "Interviews Filter";
 }
@@ -68,7 +70,7 @@
 
 
 <div class="card-body">
-    <table id="add-rows" class="table table-nowrap dt-responsive table-bordered display" style="width:100%">
+    <table id="add-rows3" class="table table-nowrap dt-responsive table-bordered display" style="width:100%">
         <thead>
             <tr>
                 <th>Candidate Name</th>
@@ -118,4 +120,10 @@
 
 </div>
 
-
+<script>
+    $(document).ready(function () {
+        $('#add-rows3').DataTable({
+            searching: false 
+        });
+    });
+</script>
