--- a/CMS/CMS.Web/Views/Candidates/Create.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Create.cshtml
@@ -42,7 +42,7 @@
         <span asp-validation-for="CompanyId" class="text-danger"></span>
     </div>
 
-    <div class="form-group" style="margin-top: 15px;">
+@*     <div class="form-group" style="margin-top: 15px;">
         <label asp-for="Email" class="control-label">Email</label>
         <input asp-for="Email" class="form-control" autocomplete="off" />
         <span asp-validation-for="Email" class="text-danger"></span>
@@ -51,17 +51,17 @@
         <label asp-for="Address" class="control-label">Address</label>
         <input asp-for="Address" class="form-control" autocomplete="off" />
         <span asp-validation-for="Address" class="text-danger"></span>
-    </div>
+    </div> *@
     <div class="form-group" style="margin-top: 15px;">
         <label asp-for="Experience" class="control-label"><span class="text-danger">*</span> Experience</label>
         <input asp-for="Experience" class="form-control" autocomplete="off" />
         <span asp-validation-for="Experience" class="text-danger"></span>
     </div>
-    <div class="form-group" style="margin-top: 15px;">
+ @*    <div class="form-group" style="margin-top: 15px;">
         <label asp-for="LinkedInUrl" class="control-label">LinkedIn Url</label>
         <input asp-for="LinkedInUrl" class="form-control" autocomplete="off" />
         <span asp-validation-for="LinkedInUrl" class="text-danger"></span>
-    </div>
+    </div> *@
     <div class="form-group" style="margin-top: 15px;">
 
         <label asp-for="CountryId" class="control-label"><span class="text-danger">*</span> Country Name</label>
