--- a/CMS/CMS.Web/Views/SearchInterviews/Index.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Index.cshtml
@@ -82,6 +82,7 @@
                 <th>Score</th>
                 <th>Notes</th>
                 <th>Evaluation</th>
+                <th>CV</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -105,6 +106,15 @@
                         else
                         {
                             <td></td>
+                        }
+                        @if (item.CandidateCVAttachmentId != null)
+                        {
+                            <td><a asp-controller="Attachments" asp-action="Download" asp-route-id="@item.CandidateCVAttachmentId">Download CV</a></td>
+                        }
+                        else
+                        {
+
+                            <td> </td>
                         }
                         <td>
                             <a class="bx bxs-edit-alt" style="font-size:x-large" asp-action="Edit" asp-route-id="@item.InterviewsId"></a> |
