--- a/CMS/CMS.Web/Views/Interviews/UpdateAfterInterview.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/UpdateAfterInterview.cshtml
@@ -7,6 +7,8 @@
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="InterviewsId" />
     <input type="hidden" asp-for="InterviewerId" />
+    <input type="hidden" asp-for="CandidateId" />
+    <input type="hidden" asp-for="PositionId" />
     <input type="hidden" asp-for="isUpdated"/>
 
     <div class="form-group">
