--- a/CMS/CMS.Web/Views/Notifications/Details.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/Details.cshtml
@@ -11,10 +11,10 @@
 
 
     <dt class="col-sm-2">Title:</dt>
-    <dd class="col-sm-10">@Model.Title</dd>
+    <dd class="col-sm-10">@Html.Raw(Model.Title)</dd>
 
     <dt class="col-sm-2">Body Description:</dt>
-    <dd class="col-sm-10">@Model.BodyDesc</dd>
+    <dd class="col-sm-10">@Html.Raw(Model.BodyDesc)</dd>
 
 
    
