--- a/CMS/CMS.Web/Views/Company/AddCompany.cshtml
+++ b/CMS/CMS.Web/Views/Company/AddCompany.cshtml
@@ -1,8 +1,8 @@
 ﻿@model CMS.Application.DTOs.CompanyDTO
 <h1>Add a company</h1>
 <form asp-action="AddCompany">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <div class="form-group">
+@*     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+ *@    <div class="form-group">
         <label asp-for="Name" class="control-label"><span class="text-danger">*</span> Name</label>
         <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
@@ -14,7 +14,7 @@
         @if (ViewBag.CountriesDTOs != null)
         {
             <select asp-for="CountryId" asp-items="@(ViewBag.CountriesDTOs)" class="form-control">
-                <option value="">Select a country</option>
+                <option value="">-- Select a country --</option>
             </select>
         }
         else
@@ -58,23 +58,21 @@
     $(document).ready(function () {
         $("#Name").on("input", function () {
             var name = $(this).val();
-
+            var countryId = $("#CountryId").val(); // Assuming you have an element with id "CountryId" to select the country.
 
             $.ajax({
                 url: '@Url.Action("CheckCompanyName", "Company")',
-                data: { name: name },
+                data: { name: name, countryId: countryId }, // Send data as an object
                 type: "POST",
                 success: function (response) {
                     if (response.exists) {
-                        $("#errorMessage").text("A company with the same name already exists.");
-                        //$("#addBookButton").prop("disabled", true);
+                        $("#errorMessage").text("A company with the same name already exists in the selected country.");
                     } else {
-                        // $("#addBookButton").prop("disabled", false);
                         $("#errorMessage").hide();
                     }
                 },
                 error: function () {
-                    $("#errorMessage").text("Error checking book name.");
+                    $("#errorMessage").text("Error checking company name.");
                 }
             });
         });
