--- a/CMS/CMS.Web/Views/Notifications/IndexInterviewernotification.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/IndexInterviewernotification.cshtml
@@ -27,7 +27,7 @@
 
                                 <td>
                                     <a style="color:blue" href="@Url.Action("Details", "Notifications", new { id = notification.NotificationsId })">
-                                        @notification.Title
+                                        @Html.Raw(notification.Title)
                                     </a>
                                 </td>
 
