--- a/CMS/CMS.Web/Views/Position/AddPosition.cshtml
+++ b/CMS/CMS.Web/Views/Position/AddPosition.cshtml
@@ -1,8 +1,8 @@
 ﻿@model CMS.Application.DTOs.PositionDTO
 <h1>Add a position</h1>
 <form asp-action="AddPosition">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-group">
+@*     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+ *@        <div class="form-group">
         <label asp-for="Name" class="control-label"><span class="text-danger">*</span> Name</label>
         <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
@@ -39,7 +39,7 @@
                     }
                 },
                 error: function () {
-                    $("#errorMessage").text("Error checking book name.");
+                    $("#errorMessage").text("Error checking position name.");
                 }
             });
         });
