--- a/CMS/CMS.Web/Views/Interviews/MyInterviews.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/MyInterviews.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using CMS.Domain.Enums;
+
 @model IEnumerable<CMS.Application.DTOs.InterviewsDTO>
 
 @{
@@ -34,13 +35,20 @@
                         <tr>
                             <th>Candidate Name</th>
                             <th>Position</th>
-                            <th>Interviewer</th>
+                            <th hidden>Interviewer</th>
                             <th>Date</th>
                             <th hidden>Parent ID</th>
-                            <th>Score</th>
+                            @if (User.IsInRole("Interviewer"))
+                            {
+                                <th>Score</th>
+                            }
+                          
                             <th>Status</th>
-                            <th>Notes</th>
-                            <th>Evaluation</th>
+                            <th hidden>Notes</th>
+                             @if (User.IsInRole("Interviewer"))
+                            {
+                                <th>Evaluation</th>
+                            }
                             <th>Details</th>
                             <th>Add Result</th>
                         </tr>
@@ -51,32 +59,47 @@
                             <tr>
                                 <td>@Html.DisplayFor(modelItem => item.FullName)</td>
                                 <td>@Html.DisplayFor(modelItem => item.Name)</td>
-                                <td>@item.InterviewerName</td>
+                                <td hidden>@item.InterviewerName</td>
                                 <td>@item.Date</td>
                                 <td hidden>@item.ParentId</td>
-                                <td>@item.Score</td>
+                                @if (User.IsInRole("Interviewer"))
+                                {
+                                    <td>@item.Score</td>
+                                }
                                 <td>@item.StatusName</td>
-                                <td>@item.Notes</td>
-                                @if (item.AttachmentId != null)
+                                <td hidden>@item.Notes</td>
+                                @if (User.IsInRole("Interviewer"))
                                 {
-                                    <td><a asp-controller="Attachments" asp-action="Download" asp-route-id="@item.AttachmentId">Download evaluation</a></td>
+                                    @if (item.AttachmentId != null)
+                                    {
+                                        <td><a asp-controller="Attachments" asp-action="Download" asp-route-id="@item.AttachmentId">Download evaluation</a></td>
+                                    }
+                                    else
+                                    {
+                                        <td> </td>
+                                    }
                                 }
-                                else
-                                {
-                                    <td> </td>
-                                }
+                                
                                 <td>
                                     <a class="bx bx-detail" style="font-size:x-large" asp-action="Details" asp-route-id="@item.InterviewsId" asp-route-previousAction="MyInterviews"></a> 
                                    
                                 </td>
-                                @if(item.isUpdated==false){
+                                @if (item.isUpdated == false && item.StatusName == StatusCode.GetName("REJ"))
+                                {
+                                    <td>Not available</td>
+                                }
+                                else{
+                                    
+                                    if (item.isUpdated == false || User.IsInRole("HR Manager"))
+                                    {
                                 <td>
-                                    <a class="bx bx-plus" style="font-size:x-large" asp-action="UpdateAfterInterview" asp-route-id="@item.InterviewsId" asp-route-idd="@item.InterviewerId"> </a>
+                                        <a class="bx bx-plus" style="font-size:x-large" asp-action="UpdateAfterInterview" asp-route-id="@item.InterviewsId" asp-route-idd="@item.InterviewerId" asp-route-iddd="@item.EvalutaionFormId"> </a>
                                     </td>
                                 }
                                 else
                                 {
                                     <td>ADDED</td>
+                                }
                                 }
 
                             </tr>
