--- a/CMS/CMS.Web/Views/SearchInterviews/Index.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+﻿@using CMS.Domain.Enums;
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <link href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css" rel="stylesheet" />
 <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
 @model IEnumerable<CMS.Application.DTOs.InterviewsDTO>
@@ -80,7 +81,7 @@
                 <th>Status</th>
                 <th hidden>Parent ID</th>
                 <th>Score</th>
-                <th>Notes</th>
+                <th hidden>Notes</th>
                 <th>Evaluation</th>
                 <th>CV</th>
                 <th>Actions</th>
@@ -98,7 +99,7 @@
                         <td>@item.StatusName</td>
                         <td hidden>@item.ParentId</td>
                         <td>@item.Score</td>
-                        <td>@item.Notes</td>
+                        <td hidden>@item.Notes</td>
                         @if (item.AttachmentId != null)
                         {
                             <td><a asp-controller="Attachments" asp-action="Download" asp-route-id="@item.AttachmentId">Download evaluation</a></td>
@@ -117,7 +118,11 @@
                             <td> </td>
                         }
                         <td>
-                            <a class="bx bxs-edit-alt" style="font-size:x-large" asp-action="Edit" asp-route-id="@item.InterviewsId"></a> |
+                            @if (item.InterviewerRole == "Interviewer" && item.StatusName == StatusCode.GetName("PND"))
+                            {
+                                <a class="bx bxs-edit-alt" style="font-size:x-large" asp-controller="Interviews" asp-action="Edit" asp-route-id="@item.InterviewsId"> </a>
+                            }
+                          
                             <a class="bx bx-detail" style="font-size:x-large" asp-action="Details" asp-route-id="@item.InterviewsId"></a> |
                             <a class="ri-delete-bin-2-line text-danger" style="font-size:x-large" asp-action="Delete" asp-route-id="@item.InterviewsId"></a>
                         </td>
