--- a/CMS/CMS.Web/Views/Position/AddPosition.cshtml
+++ b/CMS/CMS.Web/Views/Position/AddPosition.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CMS.Application.DTOs.PositionDTO
 <h1>Add a position</h1>
 <form asp-action="AddPosition" enctype="multipart/form-data">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    @* <div asp-validation-summary="ModelOnly" class="text-danger"></div> *@
         <div class="form-group">
         <label asp-for="Name" class="control-label"><span class="text-danger">*</span> Name</label>
         <input asp-for="Name" class="form-control" />
@@ -11,7 +11,7 @@
 
     <div class="form-group" style="margin-top: 15px;">
         <label for="file">Upload An evaluation Form:</label>
-        <input type="file" id="file" name="file" class="form-control-file" />
+        <input type="file" id="file" name="file" class="form-control-file" required/>
     </div>
  
    
