--- a/CMS/CMS.Web/Views/Position/AddPosition.cshtml
+++ b/CMS/CMS.Web/Views/Position/AddPosition.cshtml
@@ -52,7 +52,7 @@
         });
     });
 </script>
-<script>
+@* <script>
     function validateFileFormat(input) {
         const allowedExtensions = [".pdf", ".docx", ".png", ".jpg", ".xlsx"];
         const file = input.files[0];
@@ -69,3 +69,4 @@
         }
     }
 </script>
+ *@
