--- a/CMS/CMS.Web/Views/Candidates/Create.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Create.cshtml
@@ -15,7 +15,7 @@
         <span asp-validation-for="Phone" class="text-danger"></span>
     </div>
 
-    <div class="form-group" style="margin-top: 15px;">
+ @*    <div class="form-group" style="margin-top: 15px;">
 
         <label asp-for="PositionId" class="control-label">Position</label>
         @if (ViewBag.positions != null)
@@ -27,7 +27,7 @@
         }
 
         <span asp-validation-for="PositionId" class="text-danger"></span>
-    </div>
+    </div> *@
     <div class="form-group" style="margin-top: 15px;">
 
         <label asp-for="CompanyId" class="control-label">Company Name</label>
@@ -62,7 +62,7 @@
         <input asp-for="LinkedInUrl" class="form-control" autocomplete="off" />
         <span asp-validation-for="LinkedInUrl" class="text-danger"></span>
     </div> *@
-    <div class="form-group" style="margin-top: 15px;">
+  @*   <div class="form-group" style="margin-top: 15px;">
 
         <label asp-for="CountryId" class="control-label"><span class="text-danger">*</span> Country Name</label>
         @if (ViewBag.CompaniesDTOs != null)
@@ -74,7 +74,7 @@
         }
 
         <span asp-validation-for="CountryId" class="text-danger"></span>
-    </div>
+    </div> *@
 
     <div class="form-group" style="margin-top: 15px;">
         <label for="file">Upload CV:</label>
