--- a/CMS/CMS.Web/Views/Candidates/Details.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Details.cshtml
@@ -19,10 +19,24 @@
     <dt class="col-sm-2">Experience:</dt>
     <dd class="col-sm-10">@Html.DisplayFor(model => model.Experience)</dd>
 
+
+
+    @if (Model.CVAttachmentId != null)
+    {
+        <dt class="col-sm-2">CV Attachment:</dt>
+        <dd class="col-sm-10">
+
+            <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.CVAttachmentId">Download CV</a>
+
+        </dd>
+    }
+    else
+    {
+        <dt class="col-sm-2">CV Attachment:</dt>
+        <dd class="col-sm-10">There is no CV for this candidate</dd>
+    }
     
 
-    <dt class="col-sm-2">CVAttachmentId:</dt>
-    <dd class="col-sm-10">@Html.DisplayFor(model => model.CVAttachmentId)</dd>
     @* <dt class="col-sm-2">Country Name:</dt>
     <dd class="col-sm-10">@Html.DisplayFor(model => model.CountryName)</dd> *@
 
