--- a/CMS/CMS.Web/Views/Interviews/Create.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Create.cshtml
@@ -3,23 +3,25 @@
 
 <h2>Create</h2>
 
+<link href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.6/css/selectize.bootstrap3.min.css" rel="stylesheet" />
+
+
+
 <form asp-action="Create" id="createForm">
 @*     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
  *@
 
     <div class="form-group">
-
         <label asp-for="CandidateId" class="control-label"><span class="text-danger">*</span> Candidate</label>
         @if (ViewBag.candidateList != null)
         {
-            <select asp-for="CandidateId" asp-items="@(ViewBag.candidateList)" class="form-control">
+            <select asp-for="CandidateId" asp-items="@(ViewBag.candidateList)" class="form-control" id="candidate-dropdown" name="CandidateId" data-selectize="true">
                 <option value="">-- Select a Name --</option>
-
             </select>
         }
-
         <span asp-validation-for="CandidateId" class="text-danger"></span>
     </div>
+
    @*  <div class="form-group">
         <label asp-for="CandidateId" class="control-label">Candidate Name</label>
         @Html.DropDownListFor(model => model.CandidateId, (SelectList)ViewBag.candidateList, "Select a Name", new { @class = "form-control" })
@@ -107,4 +109,15 @@
 
         return true; 
     }
+</script>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.6/js/standalone/selectize.min.js"></script>
+
+
+
+<script>
+    $(document).ready(function () {
+        $('#candidate-dropdown').selectize();
+    });
 </script>
