--- a/CMS/CMS.Web/Views/Interviews/Delete.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Delete.cshtml
@@ -55,19 +55,24 @@
             @Html.DisplayFor(model => model.Notes)
         </dd>
 
-        <dt class="col-sm-2">
-            Evaluation
-        </dt>
-        <dd class="col-sm-10">
-            @if (Model.AttachmentId != null)
-            {
+        @if (Model.AttachmentId != null)
+        {
+            <dt class="col-sm-2">
+                Evaluation:
+            </dt>
+            <dd class="col-sm-10">
                 <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.AttachmentId">Download evaluation</a>
-            }
-            else
-            {
-
-            }
-        </dd>
+            </dd>
+        }
+        else
+        {
+            <dt class="col-sm-2">
+                Evaluation:
+            </dt>
+            <dd class="col-sm-10">
+                There is no Evaluation for this interview
+            </dd>
+        }
     </dl>
     
     <form asp-action="Delete" class="text-end">
