--- a/CMS/CMS.Web/Views/Interviews/Details.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Details.cshtml
@@ -54,20 +54,24 @@
             @Model.Notes
         </dd>
 
+        @if (Model.AttachmentId != null)
+            {
         <dt class="col-sm-2">
             Evaluation:
         </dt>
         <dd class="col-sm-10">
-            @if (Model.AttachmentId != null)
-            {
                 <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.AttachmentId">Download evaluation</a>
-            }
-            else
-            {
-               
-            }
         </dd>
-
+        }
+        else
+        {
+            <dt class="col-sm-2">
+                Evaluation:
+            </dt>
+            <dd class="col-sm-10">
+               There is no Evaluation for this interview
+            </dd>
+        }
 
     </dl>
 </div>
