--- a/CMS/CMS.Web/Views/Interviews/UpdateAfterInterview.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/UpdateAfterInterview.cshtml
@@ -96,7 +96,7 @@
 </form>
 
 
-<script>
+@* <script>
     function validateFileFormat(input) {
         const allowedExtensions = [".pdf", ".docx", ".png", ".jpg", ".xlsx"];
         const file = input.files[0];
@@ -112,7 +112,7 @@
             }
         }
     }
-</script>
+</script> *@
 
 
 
