--- a/CMS/CMS.Web/Views/Position/GetDeleteConfirmation.cshtml
+++ b/CMS/CMS.Web/Views/Position/GetDeleteConfirmation.cshtml
@@ -70,7 +70,25 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
-    
+
+        @if (Model.EvaluationId != null)
+        {
+            <dt class="col-sm-2">
+                Evalution Form:
+            </dt>
+            <dd class="col-sm-10">
+                <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.EvaluationId">Download Form</a>
+            </dd>
+        }
+        else
+        {
+            <dt class="col-sm-2">
+                Evalution Form:
+            </dt>
+            <dd class="col-sm-10">
+                There is no Evaluation form for this position
+            </dd>
+        }
 
     </dl>
 
