--- a/CMS/CMS.Web/Views/Shared/_Layout.cshtml
+++ b/CMS/CMS.Web/Views/Shared/_Layout.cshtml
@@ -668,7 +668,7 @@
                     notificationsList.innerHTML = "";
 
                     // Display the last 2 notifications
-                    const lastTwoNotifications = notifications.slice(-2);
+                    const lastTwoNotifications = notifications.slice(-2).reverse();
 
                     lastTwoNotifications.forEach((notification) => {
                         const listItem = document.createElement("div");
@@ -728,7 +728,7 @@
                     notificationsList.innerHTML = "";
 
                     // Display the last 2 notifications
-                    const lastTwoNotifications = notifications.slice(-2);
+                    const lastTwoNotifications = notifications.slice(-2).reverse();
 
                     lastTwoNotifications.forEach((notification) => {
                         const listItem = document.createElement("div");
@@ -789,7 +789,7 @@
                     notificationsList.innerHTML = "";
 
                     // Display the last 2 notifications
-                    const lastTwoNotifications = notifications.slice(-2);
+                    const lastTwoNotifications = notifications.slice(-2).reverse();
 
                     lastTwoNotifications.forEach((notification) => {
                         const listItem = document.createElement("div");
