--- a/CMS/CMS.Web/Views/Interviews/Details.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Details.cshtml
@@ -42,6 +42,12 @@
             @Model.Score
         </dd>
         <dt class="col-sm-2">
+            Actual Experience:
+        </dt>
+        <dd class="col-sm-10">
+            @Model.ActualExperience
+        </dd>
+        <dt class="col-sm-2">
             Status:
         </dt>
         <dd class="col-sm-10">
