--- a/CMS/CMS.Web/Views/Interviews/UpdateAfterInterview.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/UpdateAfterInterview.cshtml
@@ -26,6 +26,13 @@
         <textarea asp-for="Notes" class="form-control"></textarea>
         <span asp-validation-for="Notes" class="text-danger"></span>
     </div>
+
+    <div class="form-group" style="margin-top: 15px;">
+        <label asp-for="ActualExperience">Actual Experience:</label>
+        <textarea asp-for="ActualExperience" class="form-control"></textarea>
+        <span asp-validation-for="ActualExperience" class="text-danger"></span>
+    </div>
+
     <div class="form-group" style="margin-top: 15px;">
 
         <label asp-for="StatusId" class="control-label">Status</label>
